<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_search"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_title_search"
        android:icon="@drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/item_filter"
        app:showAsAction="ifRoom"
        android:title="@string/menu_title_filter"
        android:icon="@drawable/ic_menu_filter" />
    <item
        android:id="@+id/item_archive"
        app:showAsAction="never"
        android:title="@string/menu_title_archive" />
    <item
        android:id="@+id/item_settings"
        app:showAsAction="never"
        android:title="@string/menu_title_settings"/>

</menu>