<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_date_of_creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_date_of_creation"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_date_of_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_edit"
        android:textSize="12sp" />

</LinearLayout>