<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="@color/backgroundLight">

    <TextView
        android:id="@+id/bottom_edit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_bottom_sheet_edit"
        android:drawablePadding="16dp"
        android:text="@string/tv_edit_note"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/bottom_archive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_bottom_sheet_archive"
        android:drawablePadding="16dp"
        android:text="@string/tv_archive"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/bottom_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_bottom_sheet_archive"
        android:drawablePadding="16dp"
        android:text="@string/tv_return"
        android:gravity="center_vertical"
        android:visibility="gone" />

    <TextView
        android:id="@+id/bottom_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_bottom_sheet_share"
        android:drawablePadding="16dp"
        android:text="@string/tv_share"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/bottom_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_bottom_sheet_delete"
        android:drawablePadding="16dp"
        android:text="@string/tv_delete"
        android:gravity="center_vertical" />

</LinearLayout>