<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight">

    <LinearLayout
        android:id="@+id/layout_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:titleTextColor="@color/colorPrimaryText"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/toolbar_note_detail" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/tv_title"
                android:textSize="20sp"
                android:textColor="@color/backgroundLight"
                android:background="@color/colorPrimaryLight" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tv_date_of_creation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_date_of_creation" />

            <TextView
                android:id="@+id/tv_date_of_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_edit" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/dividerLight" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/tv_description"
                    android:textSize="18sp" />
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:useCompatPadding="true"
        app:layout_anchor="@id/layout_note"
        app:layout_anchorGravity="end|bottom"
        app:fabSize="normal"
        android:src="@drawable/ic_fab_edit"
        android:contentDescription="@string/fab_edit_description" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>