<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    tools:ignore="Autofill">

    <LinearLayout
        android:id="@+id/layout_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:titleTextColor="@color/colorPrimaryText"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/toolbar_new_note" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight">

                <EditText
                    android:id="@+id/field_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/tv_title"
                    android:background="@android:color/transparent"
                    android:textSize="20sp"
                    android:textColor="@color/backgroundLight"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@id/field_description"/>
            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/field_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/tv_description"
            android:textSize="18sp"
            android:inputType="textMultiLine"
            android:gravity="top" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:useCompatPadding="true"
        app:layout_anchor="@id/layout_note"
        app:layout_anchorGravity="end|bottom"
        app:fabSize="normal"
        android:src="@drawable/ic_fab_done"
        android:contentDescription="@string/fab_edit_description" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>